<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="310dp"
    android:paddingBottom="12dp"
    android:layout_gravity="center"
    android:elevation="3dp"
    android:background="@drawable/roundedwhiteback"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTxtForWhatIsSafe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxATL"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="What is ''Safe''"
        android:textColor="@color/gun_metal"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/firstPointForWhatIsSafe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxATL"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center|left"
        android:text="@string/atlMsgTxt"
        android:textColor="@color/darkorrange"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/secondPointForWhatIsSafe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtForCoureirForATL"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:gravity="center|left"
        android:text="@string/atlMsgTxt1"
        android:textColor="@color/darkorrange"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/finalPointForWhatIsSafe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtForCoureirForATL1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:gravity="center|left"
        android:text="@string/atlMsgTxt2"
        android:textColor="@color/darkorrange"
        android:textSize="14dp" />

    <CheckBox
        android:id="@+id/checkBoxForWhatIsSafe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="3dp"
        android:button="@drawable/customcheckbox_barcode"
        android:text="Are you certain this a safe location to leave the parcel?"
        android:textColor="@color/sky"
        android:textSize="14dp" />

    <Button
        android:id="@+id/atlDropOffBtnWhatIsSafe"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_below="@+id/txtForCoureirForATL2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_worrier_level"
        android:text="Confirm, Parcel is safe"
        android:textColor="@drawable/textselector"
        android:textSize="16dp" />

    <Button
        android:id="@+id/cancelBtnWhatIsSafe"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_below="@+id/atlDropOffBtn"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_elite_level"
        android:text="Cancel"
        android:textColor="@drawable/textselector"
        android:textSize="16dp" />

</LinearLayout>